commit with show page

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -31,3 +31,12 @@ a {
     padding: 0;
     margin: 0;
 }
+
+span {
+    font-weight: bold;
+}
+
+#main_wrapper {
+    width: 520px;
+    margin: auto;
+}
