commit with create function

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,8 +9,8 @@
         <table>
             <tr>
                 <th>Name</th>
-                <th>Description</th>
                 <th>Price</th>
+                <th>Description</th>
             </tr>
             <% @products.each do |p| %>
                 <tr>
@@ -29,6 +29,9 @@
             <% end %>
 
         </table>
+
+        <a href='/products/new'>New Product</a>
+
     </div>
 </body>
 
