--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
                 <td><%= @product.price %></td>
             </tr>
         </table>
-        <a href='/products'>Back</a><br />
+        <a href='/products'>Back</a>   |
         <a href='/products/<%= @product.id %>/edit'>Edit</a>
 
     </div>
