--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+    <div id='main_wrapper'>
+        <h1>New Product</h1>
+        <ul>
+            <form method='post' action='/products/create'>
+                <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+                <li>Name</li>
+                <li><input type='text' name='product[name]'>
+                <li>Description</li>
+                <li><input type='text' name='product[description]'>
+                <li>Price</li>
+                <li><input type='text' name='product[price]'>
+                <li><input type='submit' value='Create'></li>
+            </form>
+        </ul>
+    </div>
+</body>
+
+
+</html>
