--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,10 +20,7 @@
                     <td>
                         <a href='/products/<%= p.id %>'>Show</a>   |
                         <a href='/products/<%= p.id %>/edit'>Edit</a>   |
-                        <form method='post' action='products/<%= p.id %>' class='destroyButtonForm'>
-                            <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-                            <input type='submit' value='Destroy' class='destroyButton'>
-                        </form>
+                        <a href= '/products/<%= p.id %>' data-method='delete'>Destroy</a>
                     </td>
                 </tr>
             <% end %>
