--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,12 +11,14 @@
                 <th>Name</th>
                 <th>Price</th>
                 <th>Description</th>
+                <th>Category</th>
             </tr>
             <% @products.each do |p| %>
                 <tr>
                     <td><%= p.name %></td>
                     <td><%= p.price %></td>
                     <td><%= p.description %></td>
+                    <td><%= p.category.name %></td>
                     <td>
                         <a href='/products/<%= p.id %>'>Show</a>   |
                         <a href='/products/<%= p.id %>/edit'>Edit</a>   |
