--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -15,6 +15,13 @@
                 <li><input type='text' name='product[description]'>
                 <li>Price</li>
                 <li><input type='text' name='product[price]'>
+                <li>
+                    <select name='product[category]'>
+                        <% @categories.each do |c| %>
+                            <option value='<%= c.id %>'><%= c.name %></option>
+                        <% end %>
+                    </select>
+                </li>
                 <li><input type='submit' value='Create'></li>
             </form>
         </ul>
