commit with comments on products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
 <body>
     <div id='main_wrapper'>
         <h1>Listing Products</h1>
+        <a href='/comments'>All Comments</a>
         <table>
             <tr>
                 <th>Name</th>
