--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,6 +22,17 @@
         <a href='/products'>Back</a>   |
         <a href='/products/<%= @product.id %>/edit'>Edit</a>
 
+        <form method='post' action='/comments/<%= @product.id %>/create'>
+            <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+            <input type='text' name='comment'>
+            <input type='submit' value='comment'>
+        </form>
+
+
+        <% @comments.each do |c| %>
+            <p><%= c.comment %></p>
+        <% end %>
+
     </div>
 </body>
 
